--- a/src/app/components/user-create/user-create.component.html
+++ b/src/app/components/user-create/user-create.component.html
@@ -100,7 +100,7 @@
 
           <div class="form-group">
             <button class="btn btn-success btn-lg btn-block" type="submit">
-              Register
+              Create account
             </button>
           </div>
         </form>
