--- a/src/app/components/user-create/user-create.component.html
+++ b/src/app/components/user-create/user-create.component.html
@@ -76,27 +76,7 @@
             </div>
           </div>
           
-          <div class="form-group">
-            <label for="inputVerify3">File</label>
-            <input
-              class="form-control"
-              type="text"
-              formControlName="file"
-            />
-            <!-- error -->
-            <div
-              class="invalid-feedback"
-              *ngIf="submitted && myForm['file'].errors?.['required']"
-            >
-              Upload file
-            </div>
-            <div
-              class="invalid-feedback"
-              *ngIf="submitted && myForm['file'].errors?.['pattern']"
-            >
-              Enter Numbers Only
-            </div>
-          </div>
+          <app-drag-drop></app-drag-drop>
 
           <div class="form-group">
             <button class="btn btn-success btn-lg btn-block" type="submit">
