--- a/src/app/components/drag-drop/drag-drop.component.css
+++ b/src/app/components/drag-drop/drag-drop.component.css
@@ -14,7 +14,7 @@ body {
     margin-bottom: 30px;
 }
 .fileupload {
-    background-image: url("./assets/upload-icon.png");
+    /* background-image: url("./assets/upload-icon.png"); */
     background-repeat: no-repeat;
     background-size: 100px;
     background-position: center;
