--- a/src/app/components/user-create/user-create.component.html
+++ b/src/app/components/user-create/user-create.component.html
@@ -1,11 +1,15 @@
 <div class="row justify-content-center">
     <div class="col-md-4 register-user">
       <!-- form card register -->
+      <div class="text-center">
+        <p class="fs-1 btn-custom-text-color">Sign Up</p>
+        <p class="fs-6">Fill in the form with correct informations</p>
+      </div>
       <div class="card-body">
         <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
-            <label for="inputName">Name</label>
-            <input class="form-control" type="text" formControlName="name" />
+            <label for="inputName">User Name</label>
+            <input class="form-control btn-custom-radius" type="text" formControlName="name" />
             <!-- error -->
             <div
               class="invalid-feedback"
@@ -16,7 +20,7 @@
           </div>
           <div class="form-group">
             <label for="inputEmail3">Email</label>
-            <input class="form-control" type="text" formControlName="email" />
+            <input class="form-control btn-custom-radius" type="text" formControlName="email" />
             <!-- error -->
             <div
               class="invalid-feedback"
@@ -35,7 +39,7 @@
           <div class="form-group">
             <label for="inputVerify3">Mobile No</label>
             <input
-              class="form-control"
+              class="form-control btn-custom-radius"
               type="text"
               formControlName="phoneNumber"
             />
@@ -57,7 +61,7 @@
           <div class="form-group">
             <label for="inputVerify3">Card Number</label>
             <input
-              class="form-control"
+              class="form-control btn-custom-radius"
               type="text"
               formControlName="cardNumber"
             />
@@ -79,7 +83,7 @@
           <app-drag-drop></app-drag-drop>
 
           <div class="form-group">
-            <button class="btn btn-success btn-lg btn-block" type="submit">
+            <button class="btn btn-custom-primary btn-custom-radius" type="submit">
               Create account
             </button>
           </div>
