--- a/src/app/components/thank-you/thank-you.component.html
+++ b/src/app/components/thank-you/thank-you.component.html
@@ -1,1 +1,10 @@
-<p>thank-you works!</p>
+<div class="row justify-content-center thank-you">
+    <div class="col-md-4 register-user">
+      <div class="card-body text-center">
+        <p class="fs-1 custom-text-color">
+            Congratulations! <br />
+            Your account have been successfully created.
+        </p>
+      </div>
+    </div>
+</div>
