--- a/src/app/components/thank-you/thank-you.component.css
+++ b/src/app/components/thank-you/thank-you.component.css
@@ -5,3 +5,18 @@
 .custom-text-color {
     color: #BA55D3;
 }
+
+.success-icon {
+    background-image: url("./assets/upload-icon.png");
+    background-repeat: no-repeat;
+    background-size: 100px;
+    background-position: center;
+    background-color: #ffffff;
+    height: 200px;
+    width: 100%;
+    cursor: pointer;
+    /* border: 2px dashed #0f68ff; */
+    border-radius: 6px;
+    margin-bottom: 25px;
+    background-position: center 28px;
+}
