--- a/src/app/components/thank-you/thank-you.component.html
+++ b/src/app/components/thank-you/thank-you.component.html
@@ -1,9 +1,10 @@
 <div class="row justify-content-center thank-you">
     <div class="col-md-4 register-user">
       <div class="card-body text-center">
+        <div class="success-icon"></div>
         <p class="fs-1 custom-text-color">
-            Congratulations! <br />
-            Your account have been successfully created.
+          Congratulations! <br />
+          Your account have been successfully created.
         </p>
       </div>
     </div>
