Fixed upload icon

--- a/src/app/components/thank-you/thank-you.component.css
+++ b/src/app/components/thank-you/thank-you.component.css
@@ -7,7 +7,7 @@
 }
 
 .success-icon {
-    background-image: url("./assets/upload-icon.png");
+    /* background-image: url("./assets/upload-icon.png"); */
     background-repeat: no-repeat;
     background-size: 100px;
     background-position: center;
