--- a/src/app/components/user-create/user-create.component.css
+++ b/src/app/components/user-create/user-create.component.css
@@ -10,7 +10,7 @@
     padding: 10px 10px;
     background: #F4F5F5;
     border: none;
-    margin: 20px;
+    margin: 20px 0px;
 }
 
 .btn-custom-primary {
