--- a/src/app/components/drag-drop/drag-drop.component.html
+++ b/src/app/components/drag-drop/drag-drop.component.html
@@ -15,7 +15,7 @@
           </div>
         </div>
          -->
-        <div class="col-md-12">
+        <div class="col-md-12 p-0">
           <div
             class="fileupload"
             appDragDropFileUpload
