--- a/src/app/components/user-create/user-create.component.html
+++ b/src/app/components/user-create/user-create.component.html
@@ -12,7 +12,7 @@
             <!-- error -->
             <div
               class="invalid-feedback"
-              *ngIf="submitted && myForm['name'].errors?.['required']"
+              *ngIf="submitted && userForm['name'].errors?.['required']"
             >
               Name is required.
             </div>
@@ -22,13 +22,13 @@
             <!-- error -->
             <div
               class="invalid-feedback"
-              *ngIf="submitted && myForm['email'].errors?.['required']"
+              *ngIf="submitted && userForm['email'].errors?.['required']"
             >
               Enter your email.
             </div>
             <div
               class="invalid-feedback"
-              *ngIf="submitted && myForm['email'].errors?.['pattern']"
+              *ngIf="submitted && userForm['email'].errors?.['pattern']"
             >
               Enter valid email.
             </div>
@@ -44,13 +44,13 @@
             <!-- error -->
             <div
               class="invalid-feedback"
-              *ngIf="submitted && myForm['phoneNumber'].errors?.['required']"
+              *ngIf="submitted && userForm['phoneNumber'].errors?.['required']"
             >
               Enter your phone number.
             </div>
             <div
               class="invalid-feedback"
-              *ngIf="submitted && myForm['phoneNumber'].errors?.['pattern']"
+              *ngIf="submitted && userForm['phoneNumber'].errors?.['pattern']"
             >
               Enter Numbers Only
             </div>
@@ -66,13 +66,13 @@
             <!-- error -->
             <div
               class="invalid-feedback"
-              *ngIf="submitted && myForm['cardNumber'].errors?.['required']"
+              *ngIf="submitted && userForm['cardNumber'].errors?.['required']"
             >
               Enter your card number.
             </div>
             <div
               class="invalid-feedback"
-              *ngIf="submitted && myForm['cardNumber'].errors?.['pattern']"
+              *ngIf="submitted && userForm['cardNumber'].errors?.['pattern']"
             >
               Enter Numbers Only
             </div>
