--- a/src/app/components/user-create/user-create.component.css
+++ b/src/app/components/user-create/user-create.component.css
@@ -27,3 +27,51 @@
     padding-left: 10px;
     font-style: italic;
 }
+
+.invalid-feedback{
+    color: #ff606e;
+    display: block;
+  }
+
+  .round {
+    position: relative;
+  }
+
+  .round label {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    cursor: pointer;
+    height: 20px;
+    left: 0;
+    position: absolute;
+    top: 4px;
+    width: 20px;
+  }
+
+  .round label:after {
+    border: 2px solid #fff;
+    border-top: none;
+    border-right: none;
+    content: "";
+    height: 6px;
+    left: 3px;
+    opacity: 0;
+    position: absolute;
+    top: 5px;
+    transform: rotate(-45deg);
+    width: 12px;
+  }
+
+  .round input[type="checkbox"] {
+    visibility: hidden;
+  }
+
+  .round input[type="checkbox"]:checked + label {
+    background-color: #66bb6a;
+    border-color: #66bb6a;
+  }
+
+  .round input[type="checkbox"]:checked + label:after {
+     opacity: 1;
+  }
