--- a/src/app/components/user-create/user-create.component.html
+++ b/src/app/components/user-create/user-create.component.html
@@ -8,21 +8,21 @@
       <div class="card-body">
         <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
-            <input class="form-control custom-input btn-custom-radius" type="text" formControlName="name" placeholder="User Number"/>
+            <input class="form-control custom-input btn-custom-radius" type="text" formControlName="name" placeholder="User Number" required/>
             <!-- error -->
             <div
               class="invalid-feedback"
-              *ngIf="submitted && myForm['name'].errors?.['required']"
+              *ngIf="myForm['name'] && myForm['name'].invalid && (myForm['name'].dirty || myForm['name'].touched)"
             >
               Name is required.
             </div>
           </div>
           <div class="form-group">
-            <input class="form-control custom-input btn-custom-radius" type="text" formControlName="email" placeholder="Email"/>
+            <input class="form-control custom-input btn-custom-radius" type="text" formControlName="email" placeholder="Email" required/>
             <!-- error -->
             <div
               class="invalid-feedback"
-              *ngIf="submitted && myForm['email'].errors?.['required']"
+              *ngIf= "myForm['email']&& myForm['email'].errors?.['pattern']"
             >
               Enter your email.
             </div>
@@ -40,11 +40,12 @@
               type="text"
               formControlName="phoneNumber"
               placeholder="Phone Number"
+              required
             />
             <!-- error -->
             <div
               class="invalid-feedback"
-              *ngIf="submitted && myForm['phoneNumber'].errors?.['required']"
+              *ngIf="myForm['phoneNumber'] && (myForm['phoneNumber'].dirty || myForm['phoneNumber'].touched)&&myForm['phoneNumber'].errors?.['required']"
             >
               Enter your phone number.
             </div>
@@ -62,11 +63,12 @@
               type="text"
               formControlName="cardNumber"
               placeholder="Card Number"
+              required
             />
             <!-- error -->
             <div
               class="invalid-feedback"
-              *ngIf="submitted && myForm['cardNumber'].errors?.['required']"
+              *ngIf="myForm['cardNumber'].errors?.['required']"
             >
               Enter your card number.
             </div>
@@ -80,6 +82,15 @@
           
           <app-drag-drop></app-drag-drop>
 
+          <!-- check box -->
+          <div class="d-flex">
+            <div class="round">
+              <input type="checkbox" checked id="checkbox" />
+              <label for="checkbox"></label>
+            </div>
+
+          <p style="padding-left: 20px;">Agree Terms and Condition</p>
+          </div>
           <div class="form-group d-grid gap-2 text-center">
             <button class="btn btn-custom-primary btn-custom-radius" type="submit">
               Create account
