--- a/src/app/components/user-create/user-create.component.html
+++ b/src/app/components/user-create/user-create.component.html
@@ -14,9 +14,12 @@
               class="invalid-feedback"
               *ngIf="myForm['name'] && myForm['name'].invalid && (myForm['name'].dirty || myForm['name'].touched)"
             >
-              Name is required.
+              Enter user name.
             </div>
           </div>
+
+          
+
           <div class="form-group">
             <input class="form-control custom-input btn-custom-radius" type="text" formControlName="email" placeholder="Email" required/>
             <!-- error -->
@@ -56,7 +59,7 @@
               Enter Numbers Only
             </div>
           </div>
-
+          
           <div class="form-group">
             <input
               class="form-control custom-input btn-custom-radius"
