Fix User Name input

--- a/src/app/components/user-create/user-create.component.html
+++ b/src/app/components/user-create/user-create.component.html
@@ -8,7 +8,7 @@
       <div class="card-body">
         <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
-            <input class="form-control custom-input btn-custom-radius" type="text" formControlName="name" placeholder="User Number" required/>
+            <input class="form-control custom-input btn-custom-radius" type="text" formControlName="name" placeholder="User Name" required/>
             <!-- error -->
             <div
               class="invalid-feedback"
