--- a/src/app/components/user-create/user-create.component.html
+++ b/src/app/components/user-create/user-create.component.html
@@ -12,9 +12,19 @@
             <!-- error -->
             <div
               class="invalid-feedback"
-              *ngIf="myForm['name'] && myForm['name'].invalid && (myForm['name'].dirty || myForm['name'].touched)"
+              *ngIf="
+                !myForm['name'].errors?.['pattern'] 
+                && myForm['name'].invalid 
+                && (myForm['name'].dirty || myForm['name'].touched)
+              "
             >
               Enter user name.
+            </div>
+            <div
+              class="invalid-feedback"
+              *ngIf="myForm['name'].errors?.['pattern']"
+            >
+              Enter Alphabet only
             </div>
           </div>
 
