--- a/src/app/components/drag-drop/drag-drop.component.html
+++ b/src/app/components/drag-drop/drag-drop.component.html
@@ -17,7 +17,7 @@
          -->
         <div class="col-md-12 p-0">
           <div
-            class="fileupload"
+            class="fileupload-icon"
             appDragDropFileUpload
             (click)="fileField.click()"
             (fileDropped)="upload($event)"
