--- a/src/app/components/thank-you/thank-you.component.css
+++ b/src/app/components/thank-you/thank-you.component.css
@@ -3,17 +3,15 @@
 }
 
 .custom-text-color {
-    color: #BA55D3;
+    color: #9A49F6;
 }
 
 .success-icon {
-    /* background-image: url("./assets/upload-icon.png"); */
+    background-image: url("../../../assets/success-icon.png");
     background-repeat: no-repeat;
-    background-size: 100px;
     background-position: center;
     background-color: #ffffff;
-    height: 200px;
-    width: 100%;
+    height: 300px;
     cursor: pointer;
     /* border: 2px dashed #0f68ff; */
     border-radius: 6px;
