--- a/src/app/components/user-create/user-create.component.css
+++ b/src/app/components/user-create/user-create.component.css
@@ -3,7 +3,7 @@
 }
 
 .custom-text-color {
-    color: #BA55D3;
+    color: #9A49F6;
 }
 
 .custom-input {
@@ -15,7 +15,7 @@
 
 .btn-custom-primary {
     color: #fff;
-    background: #BA55D3;
+    background: #9A49F6;
     padding: 10px;
 }
 
